Fix PublishDebugLogModal close button color in Dark Mode

--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -11,3 +11,9 @@
     background: $theme-brand-primary;
   }
 }
+
+.theme__dark .publish-debug {
+  .close {
+    color: $dark-theme-gray-lightest;
+  }
+}
